<resources>
    <array name="permissions">
        <item>@string/permission_recode_audio_hint</item>
        <item>@string/permission_get_accounts_hint</item>
        <item>@string/permission_read_phone_hint</item>
        <item>@string/permission_call_phone_hint</item>
        <item>@string/permission_camera_hint</item>
        <item>@string/permission_access_fine_location_hint</item>
        <item>@string/permission_access_coarse_location_hint</item>
        <item>@string/permission_read_external_hint</item>
        <item>@string/permission_white_external_hint</item>
    </array>

    <string name="permission_get_accounts_hint">没有此权限，无法开启这个功能，请开启权限。PERMISSION_GET_ACCOUNTS</string>
    <string name="permission_read_phone_hint">没有此权限，无法开启这个功能，请开启权限。PERMISSION_READ_PHONE_STATE</string>
    <string name="permission_call_phone_hint">没有此权限，无法开启这个功能，请开启权限。PERMISSION_CALL_PHONE</string>
    <string name="permission_camera_hint">没有此权限，无法开启这个功能，请开启权限。PERMISSION_CAMERA</string>
    <string name="permission_access_fine_location_hint">没有此权限，无法开启这个功能，请开启权限。PERMISSION_ACCESS_FINE_LOCATION</string>
    <string name="permission_access_coarse_location_hint">没有此权限，无法开启这个功能，请开启权限。PERMISSION_ACCESS_COARSE_LOCATION</string>
    <string name="permission_read_external_hint">没有此权限，无法开启这个功能，请开启权限。PERMISSION_READ_EXTERNAL_STORAGE</string>
    <string name="permission_white_external_hint">没有此权限，无法开启这个功能，请开启权限。PERMISSION_WRITE_EXTERNAL_STORAGE</string>
    <string name="permission_recode_audio_hint">没有此权限，无法开启这个功能，请开启权限。PERMISSION_RECORD_AUDIO</string>

    <string name="app_name">会员中心</string>
    <string name="going_member_center">进入会员中心</string>
    <string name="vip_card_name">橙市会员卡</string>
    <string name="register">注册</string>
    <string name="register_success">注册成功</string>
    <string name="register_next_success">恭喜您，注册成功</string>
    <string name="register_next_gift">注册大礼包</string>
    <string name="see_gift">(点击查看大礼包)</string>
    <string name="account_right">我们为您同步此号码已获得权益，可在会员中心查看使用</string>
    <string name="go_login">已有账号,登录</string>
    <string name="vip_manual">会员手册</string>
    <string name="go_register">去注册</string>
    <string name="required_msg">必填信息</string>
    <string name="input_phone">请输入手机号码</string>
    <string name="input_name">请输入真实姓名</string>
    <string name="input_captcha">请输入验证码</string>
    <string name="obtain_captcha">获取验证码</string>
    <string name="vip_card_declarations">我已阅读并同意 隐私政策</string>
    <string name="login">登录</string>
    <string name="china_unicom">中国联通</string>
    <string name="commit">提交</string>
    <string name="captcha">验证码</string>
    <string name="coupon">优惠券</string>
    <string name="activities">活动</string>
    <string name="Toast_permission">权限</string>
    <string name="Dialog_Multi_Permission">多个权限</string>
    <string name="permission_illegal_code">非法权限</string>
    <string name="not_use">未使用</string>
    <string name="failed">已失效</string>
    <string name="convertibility">已兑换</string>
    <string name="error_phone_num">手机号码不正确！</string>
    <string name="error_captcha_num">验证码不正确！</string>
    <string name="phone_num">手机号码</string>
    <string name="error_login">请选择正确的格式！</string>
    <string name="error_check_box">请勾选隐私政策！</string>
    <string name="data_andr_privacy_policy">个人资料及隐私政策</string>
    <string name="privacy_policy">隐私政策</string>
    <string name="commitment_privacy_policy">* 我接受注册用户协议，并承诺我已经阅读并接受注册用户协议和隐私政策的详细内容。</string>
    <string name="read_it">我已阅读</string>
    <string name="modify_personal_data">修改个人资料</string>
    <string name="real_name">真实姓名</string>
    <string name="id_card">身份证</string>
    <string name="e_mail_address">邮箱地址</string>
    <string name="sex">性别</string>
    <string name="select_sex">请选择性别</string>
    <string name="input_id_card">请输入身份证号码</string>
    <string name="input_e_mail_address">请输入邮箱地址</string>
    <string name="detailed_address">详细地址</string>
    <string name="select_detailed_address">请选择地区</string>
    <string name="input_door_num">街道/镇+村/小区/写字楼+门牌号</string>
    <string name="growth_value_record">您的成长值获取记录</string>
    <string name="date">日期</string>
    <string name="source">来源</string>
    <string name="detailed">明细</string>
    <string name="weekly_receivez">周周领</string>
    <string name="everyday_sign">每日签到</string>
    <string name="electronic_coupons">电子券</string>
    <string name="vip_card_num">会员卡号：</string>
    <string name="to_modify_personal_data">(修改个人资料)</string>
    <string name="vip_lv">您当前的会员等级为:</string>
    <string name="cancel">取消</string>
    <string name="man">男</string>
    <string name="woman">女</string>
    <string name="sure">确定</string>
    <string name="modify_personal_data_privacy_policy">我接受注册会员章程，并承诺我已阅读并接受注册 隐私政策 的详细内容。</string>
    <string name="error_name">用户名格式不正确！</string>
    <string name="click_out_again">再按一次退出程序</string>
    <string name="w1_vip">W1会员</string>
    <string name="w2_vip">W2会员</string>
    <string name="w3_vip">W3会员</string>
    <string name="use_date">使用期限:</string>
    <string name="group_bug_coupon">团购券</string>
    <string name="cash_coupon">代金券</string>
    <string name="offset_coupon">折扣券</string>
    <string name="discount_coupon">优惠券</string>
    <string name="exchange_coupon">兑换券</string>
    <string name="use_now">立即使用</string>
    <string name="merchant_scan_bar_code_usage">商家扫条形码使用</string>
    <string name="effective_date">有效时间:</string>
    <string name="undetermined">待推出</string>
    <string name="email_error">请输入正确的电子邮箱！</string>
    <string name="id_card_error">请输入正确的身份证号码！</string>
    <string name="input_error">输入格式不正确！</string>
    <string name="loading">正在加载...</string>
    <string name="open_network">请打开网络</string>
    <string name="link_timeout">请求超时</string>
    <string name="link_failed">连接失败</string>
    <string name="six_length_captcha">验证码必须为6位数字</string>
    <string name="out_to_login">确定要退出登录吗？</string>

</resources>
