<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".activity.GrowthValueActivity">

    <com.liantong.membercenter.membercenter.utils.TopView
        android:id="@+id/tv_growth_value_top"
        android:layout_width="match_parent"
        android:layout_height="@dimen/y270"
        android:gravity="center"
        app:is_back="true"
        app:title="@string/app_name"
        app:title_color="@color/black" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginBottom="@dimen/y32"
        android:text="@string/growth_value_record"
        android:textColor="@color/black"
        android:textSize="16sp"
        android:textStyle="bold" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginEnd="@dimen/x40"
        android:layout_marginStart="@dimen/x40"
        android:background="@drawable/bg_growth_value"
        android:orientation="horizontal"
        android:padding="@dimen/y26">

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="2"
            android:gravity="start"
            android:text="@string/date"
            android:textColor="@color/tx_commitment_privacy_policy"
            android:textSize="16sp" />

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="2"
            android:text="@string/source"
            android:textColor="@color/tx_commitment_privacy_policy"
            android:textSize="16sp" />

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="end"
            android:text="@string/detailed"
            android:textColor="@color/tx_commitment_privacy_policy"
            android:textSize="16sp" />
    </LinearLayout>

    <android.support.v4.widget.SwipeRefreshLayout
        android:id="@+id/srl_growth_value"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginEnd="@dimen/x66"
        android:layout_marginStart="@dimen/x66"
        android:layout_marginTop="@dimen/y36"
        android:scrollbars="none">

        <android.support.v7.widget.RecyclerView
            android:id="@+id/rv_growth_value"
            android:layout_width="match_parent"
            android:layout_height="match_parent" />
    </android.support.v4.widget.SwipeRefreshLayout>
</LinearLayout>