<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".activity.RegisterNextActivity">

    <com.liantong.membercenter.membercenter.common.view.TopView
        android:id="@+id/tv_register_success_top"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        app:is_back="false"
        app:title="@string/register_success"
        app:title_color="@color/black" />

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        app:srcCompat="@drawable/bg_register_title" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginBottom="@dimen/y70"
        android:text="@string/register_next_success"
        android:textColor="@color/black"
        android:textSize="18sp"
        android:textStyle="bold" />

    <Button
        android:id="@+id/bt_member_center_go"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginBottom="@dimen/y106"
        android:background="@drawable/bg_login_bt"
        android:gravity="center"
        android:paddingBottom="@dimen/y40"
        android:paddingEnd="@dimen/x60"
        android:paddingStart="@dimen/x60"
        android:paddingTop="@dimen/y40"
        android:text="@string/going_member_center"
        android:textColor="@color/white"
        android:textSize="16sp" />

    <LinearLayout
        android:id="@+id/ll_register_to_coupon"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginEnd="@dimen/x26"
        android:layout_marginStart="@dimen/x26"
        android:background="@mipmap/bg_coupon_shadow"
        android:gravity="center"
        android:orientation="horizontal">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical|start"
            android:layout_marginStart="@dimen/x100"
            app:srcCompat="@drawable/bg_register_gift" />

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="vertical">

            <TextView
                android:id="@+id/tv_register_coupon_name"
                android:layout_width="@dimen/x700"
                android:layout_height="wrap_content"
                android:layout_gravity="start"
                android:gravity="start"
                android:textColor="@color/black"
                android:textSize="26sp"
                android:textStyle="bold" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="start"
                android:text="@string/see_gift" />
        </LinearLayout>
    </LinearLayout>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="@dimen/y52"
        android:text="@string/account_right"
        android:textSize="12sp" />
</LinearLayout>